--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>zuri-training</h1>
         <p>All assignment during  the training will be hosted here</p>
-        <a>Assignment 1 - Responsive web design link</a>
+        <a href="https://iemeka.github.io/zuri-training/responsive-design/">Assignment 1 - Responsive web design</a>
 
     </body>
 </html>
