--- a/responsive-design/index.html
+++ b/responsive-design/index.html
@@ -10,6 +10,34 @@
 <body>
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
+        <!--  -->
+        <div id="menuToggle">
+            <input name="toggle" type="checkbox" />
+            <label for="toggle">
+                <span>menu</span>
+
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </label>
+
+            <ul id="menu">
+                <a href="#">
+                    <li>Home</li>
+                </a>
+                <a href="#">
+                    <li>About</li>
+                </a>
+                <a href="#">
+                    <li>Gallery</li>
+                </a>
+                <a href="#">
+                    <li>Contact</li>
+                </a>
+            </ul>
+        </div>
+        <!--  -->
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
