--- a/responsive-design/index.html
+++ b/responsive-design/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <a name="home"></a>
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
         <!--  -->
@@ -23,31 +24,31 @@
             </label>
 
             <ul id="menu">
-                <a href="#">
+                <a href="#home">
                     <li>Home</li>
                 </a>
-                <a href="#">
+                <a href="#about">
                     <li>About</li>
                 </a>
-                <a href="#">
+                <a href="#gallery">
                     <li>Gallery</li>
                 </a>
-                <a href="#">
+                <a href="#contact">
                     <li>Contact</li>
                 </a>
             </ul>
         </div>
         <!--  -->
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
 
     <!-- Hero section -->
-
+    
     <div class="hero-section">
         <div class="hero-content-heading">
             <h3>Let's take a snapshot</h3>
@@ -67,6 +68,7 @@
         <div class="hero-background-pos"></div>
     </div>
     <div class="snapshot-team">
+        <a name="about"></a>
         <h2>Snapshot Team</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, nesciunt!</p>
     </div>
@@ -89,6 +91,7 @@
 
     <!-- Gallery section -->
     <div class="gallery-section">
+        <a name="gallery"></a>
         <div class="gallery-content">
             <h4>Gallery</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, sapiente. Nullae rem!</p>
@@ -115,6 +118,7 @@
 
     <!-- Footer section -->
     <div class="footer">
+        <a name="contact"></a>
         <div class="footer-content">
             <h4>Send a message</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, sapiente. Nuleos rem!</p>
