--- a/google-home/index.html
+++ b/google-home/index.html
@@ -15,26 +15,26 @@
             </li>
             <li>
                 <a href="#">
-                    <img src="./grid.png" alt="grid">
+                    <img src="img/grid.png" alt="grid">
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="./jman.jpg" alt="avatar">
+                    <img src="img/jman.jpg" alt="avatar">
                 </a>
             </li>
         </ul>
         <section class="sect-google">
-            <img src="./google-logo.png" width="" alt="logo">
+            <img src="img/google-logo.png" width="" alt="logo">
         </section>
         <section class="sect-search">
             <div class="search-box">
                 <a href="#">
-                    <img src="./search.png" alt="search">
+                    <img src="img/search.png" alt="search">
                 </a>
                 <input type="search">
                 <a href="#">
-                    <img src="./mic.png" alt="mic">
+                    <img src="img/mic.png" alt="mic">
                 </a>
             </div>
         </section>
@@ -70,7 +70,7 @@
                 <li><a href="#">how search works</a></li>
             </ul>
             <ul>
-                <li><img src="./leaf.png" alt="leaf"><a href="#"> carbon neutral since 2007</a></li>
+                <li><img src="img/leaf.png" alt="leaf"><a href="#"> carbon neutral since 2007</a></li>
             </ul>
             <ul>
                 <li><a href="#">privacy</a></li>
