--- a/google-home/index.html
+++ b/google-home/index.html
@@ -20,7 +20,7 @@
             </li>
             <li>
                 <a href="#">
-                    <img src="img/jman.jpg" alt="avatar">
+                    <img src="img/pman.jpg" alt="avatar">
                 </a>
             </li>
         </ul>
