--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,9 @@
     <head>
         <title>Augustine E. N.</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="theme-color" content="#f39c12"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
     </head>
     <body>
         <div class="container">
