--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Augustine E. N.</title>
         <link rel="stylesheet" href="style.css">
-        <meta name="theme-color" content="#ffa502"/>
+        <meta name="theme-color" content="#6F1E51"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
     </head>
